[project]
name = "thingsync"
version = "0.0.1"
description = "A simple Python sync service for the Things task manager."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-core==2.24.2",
    "google-api-python-client==2.166.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "googleapis-common-protos==1.69.2",
    "python-dotenv>=1.2.1",
    "uv==0.6.14",
    "watchdog>=6.0.0",
]
